...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.text.style.TextOverflow
import androidx.compose.ui.unit.dp
import com.techadive.pixabay.R

const val BackTag = "Back"

@Composable
fun ToolbarView(
    isBackVisible: Boolean,
    onBackClicked: () -> Unit,
) {
...
